ci: fix deploy to heroku by fixing heap usage
Took 3 minutes